crates/java-syntax/tests/snapshots/lexer_snapshots__lex_boolean_and_null_literals.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
true false null
TOKENS:
TRUE_LITERAL "true"
WHITESPACE " "
FALSE_LITERAL "false"
WHITESPACE " "
NULL_LITERAL "null"

LEX_ERRORS:
<none>
