crates/java-syntax/tests/snapshots/lexer_snapshots__lex_char_literals.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
'a' '\n' '\''
TOKENS:
CHAR_LITERAL "'a'"
WHITESPACE " "
CHAR_LITERAL "'\\n'"
WHITESPACE " "
CHAR_LITERAL "'\\''"

LEX_ERRORS:
<none>
