crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_illegal_text_block_open.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"""illegal
TOKENS:

LEX_ERRORS:
LexicalError { kind: IllegalTextBlockOpen, range: 0..3 }
LexicalError { kind: UnterminatedTextBlock, range: 0..10 }
