crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_char_empty.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
''
TOKENS:
CHAR_LITERAL "''"

LEX_ERRORS:
LexicalError { kind: InvalidChar, range: 0..2 }
