crates/java-syntax/tests/snapshots/lexer_snapshots__lex_error_invalid_char_multiple.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
'abc'
TOKENS:
CHAR_LITERAL "'abc'"

LEX_ERRORS:
LexicalError { kind: InvalidChar, range: 0..5 }
